Add proto for requesting rewards
